Added buttons to the topbar.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
                     </div>
                 </div>
                 <div id="topBarBottom">
+                    <div id="topBarBottomLeft">
+                        <div id="avatarPic"><img id="avatar" height="70px" width="70px" alt="User avatar picture" src="https://images.pexels.com/photos/920220/pexels-photo-920220.jpeg?auto=compress&cs=tinysrgb&w=800">
+                        </div>
+                        <div id="welcomeMessage"> Hi there,</div>
+                        <div id="userName"> Hennie van Heerden (@hennie)</div>
+                    </div>
+                    <div id="topBarBottomRight">
+                        <div id="newButton"><button type="none">New</button></div>
+                        <div id="uploadButton"><button type="none">Upload</button></div>
+                        <div id="shareButton"><button type="none">Share</button></div>
+                    </div>
 
                 </div>
             </div>
