--- a/index.html
+++ b/index.html
@@ -62,6 +62,17 @@
 
                 </div>
             </div>
+            <div id="mainContent">
+                <p>Your Projects</p>
+                <div id="cards">
+                    <div class="card">Card1</div>
+                    <div class="card">Card2</div>
+                    <div class="card">Card3</div>
+                    <div class="card">Card4</div>
+                    <div class="card">Card5</div>
+                    <div class="card">Card6</div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
