card styling for overflow

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div id="mainContent">
-                <p>Your Projects</p>
+                <h3>Your Projects</h3>
                 <div id="cards">
                     <div class="card">Card1</div>
                     <div class="card">Card2</div>
