Added more card styling and card content

--- a/index.html
+++ b/index.html
@@ -65,12 +65,30 @@
             <div id="mainContent">
                 <h3>Your Projects</h3>
                 <div id="cards">
-                    <div class="card">Card1</div>
-                    <div class="card">Card2</div>
-                    <div class="card">Card3</div>
-                    <div class="card">Card4</div>
-                    <div class="card">Card5</div>
-                    <div class="card">Card6</div>
+                    <div class="card">
+                        <h4>Card1</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                    </div>
+                    <div class="card">
+                        <h4>Card2</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                    </div>
+                    <div class="card">
+                        <h4>Card3</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                    </div>
+                    <div class="card">
+                        <h4>Card4</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus.</p>
+                    </div>
+                    <div class="card">
+                        <h4>Card5</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                    </div>
+                    <div class="card">
+                        <h4>Card6</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                    </div>
                 </div>
             </div>
         </div>
