Added card buttons with styling and svg icons. Created the basic layout of the right side panel

--- a/index.html
+++ b/index.html
@@ -68,27 +68,67 @@
                     <div class="card">
                         <h4>Card1</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                        <div class="classButtons">
+                            <img src="./resources/star-plus-outline.svg" height="25px">
+                            <img src="resources/eye-plus-outline.svg" height="25px">
+                            <img src="./resources/source-fork.svg" height="25px">
+                        </div>
                     </div>
                     <div class="card">
                         <h4>Card2</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                        <div class="classButtons">
+                            <img src="./resources/star-plus-outline.svg" height="25px">
+                            <img src="resources/eye-plus-outline.svg" height="25px">
+                            <img src="./resources/source-fork.svg" height="25px">
+                        </div>
                     </div>
                     <div class="card">
                         <h4>Card3</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                        <div class="classButtons">
+                            <img src="./resources/star-plus-outline.svg" height="25px">
+                            <img src="resources/eye-plus-outline.svg" height="25px">
+                            <img src="./resources/source-fork.svg" height="25px">
+                        </div>
                     </div>
                     <div class="card">
                         <h4>Card4</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus.</p>
+                        <div class="classButtons">
+                            <img src="./resources/star-plus-outline.svg" height="25px">
+                            <img src="resources/eye-plus-outline.svg" height="25px">
+                            <img src="./resources/source-fork.svg" height="25px">
+                        </div>
                     </div>
                     <div class="card">
                         <h4>Card5</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                        <div class="classButtons">
+                            <img src="./resources/star-plus-outline.svg" height="25px">
+                            <img src="resources/eye-plus-outline.svg" height="25px">
+                            <img src="./resources/source-fork.svg" height="25px">
+                        </div>
                     </div>
                     <div class="card">
                         <h4>Card6</h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus a nisi eu enim accumsan dignissim at id sem. Cras tincidunt arcu sed rhoncus viverra. Nunc venenatis ornare blandit. Praesent feugiat est et elit laoreet luctus. </p>
+                        <div class="classButtons">
+                            <img src="./resources/star-plus-outline.svg" height="25px">
+                            <img src="resources/eye-plus-outline.svg" height="25px">
+                            <img src="./resources/source-fork.svg" height="25px">
+                        </div>
                     </div>
+                </div>
+            </div>
+            <div id="sideBarRight">
+                <h3>Announcements</h3>
+                <div id="announcementCard">
+
+                </div>
+                <h3>Trending</h3>
+                <div id="trendingCard">
+
                 </div>
             </div>
         </div>
