Added some content for the Announcement Card

--- a/index.html
+++ b/index.html
@@ -124,7 +124,14 @@
             <div id="sideBarRight">
                 <h3>Announcements</h3>
                 <div id="announcementCard">
-
+                    <h5>Site Maintenance</h4>
+                    <p>Routine maintenance will be carried out on the 23rd of August.</p>
+                    <hr>
+                    <h5>Mental Wellbeing Day</h4>
+                    <p>Take some time, get a cup of coffee, and just relax!</p>
+                    <hr>
+                    <h5>Database Upgrade Notice</h4>
+                    <p>Services will temporarily be suspended on the 22nd of August.</p>
                 </div>
                 <h3>Trending</h3>
                 <div id="trendingCard">
