Removed faulty div closing tags from trending card

--- a/index.html
+++ b/index.html
@@ -135,10 +135,18 @@
                 </div>
                 <h3>Trending</h3>
                 <div id="trendingCard">
-                    <img src="https://cdn.pixabay.com/photo/2024/07/01/10/50/flycatcher-8864922_1280.jpg" alt="A bird" height="40px" width="40px">
-                    <img src="https://cdn.pixabay.com/photo/2025/01/13/19/40/horse-9331340_1280.jpg" alt="The horse whisperer" height="40px" width="40px">
-                    <img src="https://cdn.pixabay.com/photo/2024/09/09/17/22/donkey-9035452_1280.jpg" alt="A donkey" height="40px" width="40px">
-                    <img src="https://cdn.pixabay.com/photo/2024/03/03/20/44/cat-8611246_1280.jpg" alt="A brown car" height="40px" width="40px">
+                    <div class="trendingItem">
+                        <img src="https://cdn.pixabay.com/photo/2024/07/01/10/50/flycatcher-8864922_1280.jpg" alt="A bird" height="40px" width="40px">
+                    </div>
+                    <div class="trendingItem">
+                        <img src="https://cdn.pixabay.com/photo/2025/01/13/19/40/horse-9331340_1280.jpg" alt="The horse whisperer" height="40px" width="40px">
+                    </div>
+                    <div class="trendingItem">
+                        <img src="https://cdn.pixabay.com/photo/2024/09/09/17/22/donkey-9035452_1280.jpg" alt="A donkey" height="40px" width="40px">
+                    </div>
+                    <div class="trendingItem">
+                        <img src="https://cdn.pixabay.com/photo/2024/03/03/20/44/cat-8611246_1280.jpg" alt="A brown car" height="40px" width="40px">
+                    </div>
                 </div>
             </div>
         </div>
