Finished trending card styling. Added source reference credits

--- a/index.html
+++ b/index.html
@@ -137,17 +137,40 @@
                 <div id="trendingCard">
                     <div class="trendingItem">
                         <img src="https://cdn.pixabay.com/photo/2024/07/01/10/50/flycatcher-8864922_1280.jpg" alt="A bird" height="40px" width="40px">
+                        <div>
+                            <h4>@sarahH</h4>
+                            <p>Pie eater extraodinaire</p>
+                        </div>
                     </div>
                     <div class="trendingItem">
                         <img src="https://cdn.pixabay.com/photo/2025/01/13/19/40/horse-9331340_1280.jpg" alt="The horse whisperer" height="40px" width="40px">
+                        <div>
+                            <h4>@peterG</h4>
+                            <p>Live to code!</p>
+                        </div>
                     </div>
                     <div class="trendingItem">
                         <img src="https://cdn.pixabay.com/photo/2024/09/09/17/22/donkey-9035452_1280.jpg" alt="A donkey" height="40px" width="40px">
+                        <div>
+                            <h4>@TimRodgers</h4>
+                            <p>Life of the party!</p>
+                        </div>
                     </div>
                     <div class="trendingItem">
                         <img src="https://cdn.pixabay.com/photo/2024/03/03/20/44/cat-8611246_1280.jpg" alt="A brown car" height="40px" width="40px">
+                        <div>
+                            <h4>@susan1969</h4>
+                            <p>Granny googles goods!</p>
+                        </div>
                     </div>
                 </div>
+                <p id="creditSection">
+                   Images: 
+                   <a href="https://www.pexels.com/" target="_blank">Pexels.com</a>, 
+                   <a href="https://pixabay.com/" target="_blank">Pixabay.com</a>, Glyph icons: 
+                   <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>, Font: 
+                   <a href="https://fonts.google.com/specimen/M+PLUS+Rounded+1c" target="_blank">Google Fonts</a>
+                </p>
             </div>
         </div>
     </body>
