--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
                    Images: 
                    <a href="https://www.pexels.com/" target="_blank">Pexels.com</a>, 
                    <a href="https://pixabay.com/" target="_blank">Pixabay.com</a>, Glyph icons: 
-                   <a href="https://getbootstrap.com/" target="_blank">Bootstrap</a>, Font: 
+                   <a href="https://getbootstrap.com/" target="_blank">Bootstrap, </a>
+                   <a href="https://pictogrammers.com/library/mdi/" target="_blank">Pictogrammers</a>, Font: 
                    <a href="https://fonts.google.com/specimen/M+PLUS+Rounded+1c" target="_blank">Google Fonts</a>
                 </p>
             </div>
